# vaintage-compliance-uat-

./: .gitignore  README.md  VAIntageComplianceUat.sln  pyproject.toml
compliance_uat/: __init__.py  env_loader.py  ledger.py  live_zdr.py  payload.py  scrubber.py
compliance_uat/adapters/: __init__.py  base.py  guard_bridge.py  mock.py  python_reference.py
config/: staging.example.env  watch_paths.windows.json
fixtures/: clinical_keywords.json  phi_samples.json
phase1/VAIntage.Phase1.Scrubbing.Tests/: OutboundPayloadScrubbingTests.cs  VAIntage.Phase1.Scrubbing.Tests.csproj
phase2/tests/: conftest.py  test_zdr_config_audit.py
phase2/zdr_audit/: __init__.py  config.py  env_loader.py  guard_cli.py  ledger.py  live_zdr.py
phase3/: Run-DiskAudit.ps1
phase4/VAIntage.Phase4.Vaporization.Tests/: ComplianceDrawerVaporizationTests.cs  VAIntage.Phase4.Vaporization.Tests.csproj
scripts/: Run-FullComplianceUat.ps1  Run-FullComplianceUat.sh  disk_watch.ps1  guard-test-mac.sh  guard_test_stub.py  run_full_ledger.py
src/VAIntage.Guard.Core/: VAIntage.Guard.Core.csproj
src/VAIntage.Guard.Core/Api/: AzureOpenAiClientConfig.cs
src/VAIntage.Guard.Core/Ledger/: ComplianceLedger.cs
src/VAIntage.Guard.Core/Memory/: MemoryWipe.cs
src/VAIntage.Guard.Core/Payload/: OutboundPayloadHandler.cs  PayloadAttestation.cs
src/VAIntage.Guard.Core/Scrubbing/: SafeHarborScrubber.cs
src/VAIntage.Guard.Core/Session/: ComplianceDrawerService.cs  GuardSessionState.cs  TypingSimulator.cs
src/VAIntage.Guard.Host/: GuardApplication.cs  VAIntage.Guard.Host.csproj
src/VAIntage.Guard.TestCli/: Program.cs  VAIntage.Guard.TestCli.csproj
tests/: conftest.py  test_phase1_scrub.py  test_phase2_zdr.py  test_phase3_disk.py  test_phase4_vaporization.py
