[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["compliance_uat*"]

[project]
name = "vaintage-compliance-uat"
version = "0.1.0"
description = "Portable ZDR / Safe Harbor compliance UAT harness for VAIntage Guard"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "integration: live Azure OpenAI ZDR ping (requires --run-live or RUN_LIVE_ZDR=1)",
    "heavy: 1000-note disk audit (requires --run-heavy or RUN_HEAVY=1)",
]
