[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["phase2"]
include = ["zdr_audit*"]

[project]
name = "vaintage-phase2-zdr"
version = "1.0.0"
description = "VAIntage UAT Phase 2 — Azure OpenAI ZDR configuration audit (Python)"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["phase2/tests"]
addopts = "-v"
markers = [
    "integration: live Azure OpenAI ZDR ping (RUN_LIVE_ZDR=1)",
]
